# vericirq

./: .gitignore  Examples.ipynb  LICENSE  README.md  Timing.ipynb  example.py  lint.sh  pyproject.toml  tmp.ipynb
.github/skills/vericirq-circuit-implementation/: SKILL.md
.github/workflows/: ci.yaml
vericirq/: __init__.py  gates.py  simulation.py  test_vericirq.py  vericirq.py
vericirq/examples/: README.md  const_adder.py  cuccaro_adder.py  cuccaro_compare.py  cuccarro_adder.py  divide.py  draper_adder.py  gidney_adder.py  jhha_multiplier.py  mct_multiplier.py  mod_adder.py  mod_mul.py  square_root.py  subtract.py
