[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "vericirq"
version = "0.1.0"
description = "Library for formal verification of quantum circuits."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Dima Fedoriaka" }]


# https://peps.python.org/pep-0508/
dependencies = [
    "cirq",
    "z3-solver", 
]

# Development dependencies
# pip install .[test]
[project.optional-dependencies]
test = [
    "pytest",
]

[tool.black]
line-length = 120

[tool.setuptools]
py-modules = ["vericirq"]